# logtail

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  error.rs  filter.rs  follow.rs  input.rs  main.rs
