[package]
name = "logtail"
version = "0.1.0"
edition = "2024"
description = "High-performance CLI tool for streaming and filtering large log files"
license = "MIT"
repository = "https://github.com/pashaproton/logtail"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
